<resources>
    <string name="app_name">Descendants</string>
    <string name="title_activity_main">Descendants</string>
    <string name="list_fragment_label">All persons</string>
    <string name="details_fragment_label">Person details</string>
    <string name="add_fragment_label">New person</string>

    <string name="til_name_hint">Name</string>
    <string name="til_birthday_hint">Birthday</string>
    <string name="til_age_hint">Age</string>
    <string name="til_height_hint">Height</string>
    <string name="til_height_suffix">cm</string>
    <string name="til_type_hint">Type</string>
    <string name="children_hint">Children</string>
    <string name="grandchildren_hint">Grandchildren</string>
    <string name="parents_hint">Parents</string>
    <string name="grandparents_hint">Grandparents</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>

    <string name="date_format">dd.MM.yyyy</string>
    <string name="year">year</string>
    <string name="years">years</string>

    <string name="dialog_title_select_parents">Select parents</string>
    <string name="dialog_title_select_children">Select children</string>
</resources>