<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListFragment">

    <fragment
        android:id="@+id/ListFragment"
        android:name="dev.kaestle.descendants.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_ListFragment_to_DetailsFragment"
            app:destination="@id/DetailsFragment">
            <argument
                android:name="personIndex"
                app:argType="integer"
                android:defaultValue="0"/>
        </action>
        <action
            android:id="@+id/action_ListFragment_to_addFragment"
            app:destination="@id/AddFragment" />
    </fragment>
    <fragment
        android:id="@+id/DetailsFragment"
        android:name="dev.kaestle.descendants.DetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_details">

        <action
            android:id="@+id/action_DetailsFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
        <argument
            android:name="personIndex"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/AddFragment"
        android:name="dev.kaestle.descendants.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fragment_add" >
        <action
            android:id="@+id/action_addFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
</navigation>